[package]
name = "domik"
version = "0.2.0"
edition = "2021"


[dependencies]
# audio_server = { path = "../audio_server" }
audio_server = 	{ git = "https://github.com/AlexanderARodin/audio_server.git", branch="main" }
raalog = 	{ git = "https://github.com/AlexanderARodin/raalog.git", tag="v0.2.0" }
call_list = 	{ git = "https://github.com/AlexanderARodin/call_list.git", branch="main" }

egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
serde = { version = "1", features = ["derive"] }



[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
